1. Collection API Улучшения[#176843]