@@ -2,7 +2,6 @@ package collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -11,16 +10,14 @@ import static org.hamcrest.core.Is.is;
 public class ConvertMatrix2ListTest {
     @Test
     public void when2on2ArrayThenList4() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2},
                 {3, 4},
                 {5, 6}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6
+        assertThat(
+                new ConvertMatrix2List().toList(input),
+                is(List.of(1, 2, 3, 4, 5, 6))
         );
-        List<Integer> result = list.toList(input);
-        assertThat(result, is(expect));
     }
 }
