@@ -2,8 +2,9 @@ package collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
@@ -12,20 +13,22 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
-        List<String> result = Departments.fillGaps(input);
-        Departments.sortAsc(result);
-        assertThat(result, is(expect));
+        assertThat(
+                Departments.fillGaps(List.of("k1/sk1")).stream()
+                        .sorted(Comparator.naturalOrder())
+                        .collect(Collectors.toList()),
+                is(List.of("k1", "k1/sk1"))
+        );
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
-        List<String> result = Departments.fillGaps(input);
-        Departments.sortAsc(result);
-        assertThat(result, is(expect));
+        assertThat(
+                Departments.fillGaps(List.of("k1", "k1/sk1")).stream()
+                        .sorted(Comparator.naturalOrder())
+                        .collect(Collectors.toList()),
+                is(List.of("k1", "k1/sk1"))
+        );
     }
 
 }
